# jse_pipeline

./: .gitignore  Home.py  README.md  app.py  example.env   packages.txt  pyproject.toml  requirements.txt
pages/: Document_Label.py  Table_Extraction.py  textraction_page.py
utils/: dataframe_transformations.py  llm_label.py  prompt.py  s3_operations.py  textraction.py
